[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.13.0"
actix-web = "4.3.1"
shuttle-actix-web = "0.13.0"

mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4" # Used for setting DateTimes
serde = "1" # Used in the Map Data into Structs section
futures = "0.3"
rand = "0.8"
dotenv = "0.15.0"

